Updates the trigger to run on self-hosted runner

--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -63,6 +63,9 @@ jobs:
         TAG=$(git rev-parse --short HEAD)
         echo "TAG=$TAG" >> $GITHUB_ENV
 
+    - name: Set KUBECONFIG
+      run: echo "KUBECONFIG=$HOME/.kube/config" >> $GITHUB_ENV
+
     - name: Configure Kubernetes
       run: |
         mkdir -p $HOME/.kube
