--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -11,11 +11,11 @@ jobs:
     permissions:
       contents: read
       packages: write
+    outputs:
+      new_tag: ${{ steps.version_tag.outputs.new_tag }}
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-      with:
-        fetch-depth: '0'
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
@@ -32,16 +32,18 @@ jobs:
         echo "OWNER_LC=$(echo ${{ github.repository_owner }} | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
 
     - name: Bump version and push tag
-      uses: anothrNick/github-tag-action@v1 # Don't use @master or @v1 unless you're happy to test the latest version
+      id: version_tag
+      uses: anothrNick/github-tag-action@v1
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # if you don't want to set write permissions use a PAT token
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         WITH_V: true
         PRERELEASE: true
 
     - name: Build and push Docker image
       run: |
-        docker build -t ghcr.io/${{ env.OWNER_LC }}/preparesh-bookstore-api:${{ steps.version_tag.new_tag }} .
-        docker push ghcr.io/${{ env.OWNER_LC }}/preparesh-bookstore-api:${{ steps.version_tag.new_tag }}
+        echo "Building image with tag: ${{ steps.version_tag.outputs.new_tag }}"
+        docker build -t ghcr.io/${{ env.OWNER_LC }}/preparesh-bookstore-api:${{ steps.version_tag.outputs.new_tag }} .
+        docker push ghcr.io/${{ env.OWNER_LC }}/preparesh-bookstore-api:${{ steps.version_tag.outputs.new_tag }}
 
   Deploy:
     runs-on: self-hosted
@@ -63,11 +65,8 @@ jobs:
     - name: Deploy with Helm
       run: |
         export KUBECONFIG=$HOME/.kube/config
-        TAG=$(git rev-parse --short HEAD)
         OWNER_LC=$(echo ${{ github.repository_owner }} | tr '[:upper:]' '[:lower:]')
+        echo "Deploying with tag: ${{ needs.Build.outputs.new_tag }}"
         helm upgrade --install api ./helm/bookstore-api \
           --set image.repository=ghcr.io/${OWNER_LC}/preparesh-bookstore-api \
-          --set image.tag=${{ steps.version_tag.new_tag }}
-    # - name: Deploy with Helm
-    #   run: |
-    #     helm upgrade --install api ./helm --set image.repository=ghcr.io/${{ env.OWNER_LC }}/preparesh-bookstore-api --set image.tag=$TAG
+          --set image.tag=${{ needs.Build.outputs.new_tag }}
