patch: Update rollout namespace

--- a/helm/bookstore-api/values-production.yaml
+++ b/helm/bookstore-api/values-production.yaml
@@ -1,6 +1,6 @@
 # Default values for the bookstore-api chart
 replicaCount: 2
-
+namespace: production
 image:
   repository: ghcr.io/lalogaribo/bookstore-api
   tag: "1.0"
