--- a/helm/bookstore-api/templates/deployment.yaml
+++ b/helm/bookstore-api/templates/deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Rollout
 metadata:
   name: {{ .Release.Name }}-bookstore-api
+  namespace: {{ .Values.namespace }}
   labels:
     app: bookstore-api
     chart: {{ .Chart.Name }}-{{ .Chart.Version }}
