--- a/helm/bookstore-api/values.yaml
+++ b/helm/bookstore-api/values.yaml
@@ -5,7 +5,7 @@ image:
   repository: ghcr.io/lalogaribo/bookstore-api
   tag: "1.0"
   pullPolicy: IfNotPresent
-
+namespace: default
 service:
   type: ClusterIP
   port: 80
